# saddle-procgen-wfc

./: .gitignore  Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: -0Seb9SE.js  C3Idcv21.js  D0KKze3s.js  QcWwyuIx.js  gLVwpu6l.js
_app/immutable/entry/: app.v-E66oOG.js  start.DVbI8PpL.js
_app/immutable/nodes/: 0.BIRbmrfF.js  1.DfHOke5S.js  2.hR_F2wC8.js  3.DyHmmvFE.js  4.C_tMSsYH.js
demo/async_runtime/: index.html
demo/auto_rotation/: index.html
demo/basic_2d/: index.html
demo/constrained_room/: index.html
demo/data_driven/: index.html
demo/debug_entropy/: index.html
demo/interactive/: index.html
demo/learned_rules/: index.html
demo/navmesh_dungeon/: index.html
demo/socket_builder/: index.html
demo/step_visualizer/: index.html
demo/tilemap_dungeon/: index.html
demo/tilemap_overlap/: index.html
demo/voxel_3d/: index.html
demo/voxel_wfc/: index.html
demos/async_runtime/: index.html
demos/auto_rotation/: index.html
demos/basic_2d/: index.html
demos/constrained_room/: index.html
demos/data_driven/: index.html
demos/data_driven/assets/: rules.ron
demos/debug_entropy/: index.html
demos/interactive/: index.html
demos/learned_rules/: index.html
demos/navmesh_dungeon/: index.html
demos/socket_builder/: index.html
demos/step_visualizer/: index.html
demos/tilemap_dungeon/: index.html
demos/tilemap_overlap/: index.html
demos/voxel_3d/: index.html
demos/voxel_wfc/: index.html
docs/: architecture.md  configuration.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
examples/: Cargo.toml
examples/async_runtime/: Cargo.toml
examples/async_runtime/src/: main.rs
examples/auto_rotation/: Cargo.toml
examples/auto_rotation/src/: main.rs
examples/basic_2d/: Cargo.toml
examples/basic_2d/src/: main.rs
examples/constrained_room/: Cargo.toml
examples/constrained_room/src/: main.rs
examples/data_driven/: Cargo.toml
examples/data_driven/src/: main.rs
examples/debug_entropy/: Cargo.toml
examples/debug_entropy/src/: main.rs
examples/interactive/: Cargo.toml
examples/interactive/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: main.rs
examples/lab/src/e2e/: mod.rs
examples/learned_rules/: Cargo.toml
examples/learned_rules/src/: main.rs
examples/navmesh_dungeon/: Cargo.toml
examples/navmesh_dungeon/src/: e2e.rs  main.rs
examples/shared/: support.rs
examples/socket_builder/: Cargo.toml
examples/socket_builder/src/: main.rs
examples/step_visualizer/: Cargo.toml
examples/step_visualizer/src/: main.rs
examples/support/: Cargo.toml
examples/support/src/: lib.rs
examples/tilemap_dungeon/: Cargo.toml
examples/tilemap_dungeon/src/: e2e.rs  main.rs
examples/tilemap_overlap/: Cargo.toml
examples/tilemap_overlap/src/: main.rs
examples/voxel_3d/: Cargo.toml
examples/voxel_3d/src/: main.rs
examples/voxel_wfc/: Cargo.toml
examples/voxel_wfc/src/: e2e.rs  main.rs
src/: components.rs  config.rs  debug.rs  learn.rs  lib.rs  messages.rs  overlap.rs  overlap_tests.rs  sockets.rs  solver_tests.rs  systems.rs  systems_tests.rs
src/solver/: bitset.rs  grid.rs  mod.rs  rules.rs  solve.rs
