[workspace]
members = [
    "support",
    "auto_rotation",
    "basic_2d",
    "constrained_room",
    "voxel_3d",
    "async_runtime",
    "debug_entropy",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
saddle-procgen-wfc = { path = ".." }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
