[package]
name = "saddle-procgen-wfc-example-tilemap-overlap"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }
saddle-procgen-wfc = { workspace = true }
saddle-world-tilemap = { git = "https://github.com/julien-blanchon/saddle-world-tilemap" }
saddle-world-tilemap-example-support = { git = "https://github.com/julien-blanchon/saddle-world-tilemap", package = "saddle-world-tilemap-example-support" }

[lints]
workspace = true
